modules/petclinic/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 026882776119.dkr.ecr.ap-northeast-1.amazonaws.com/starbucks:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
