modules/petclinic/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: petclinic
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: petclinic
  type: ClusterIP
